--- a/estilosimagenes.css
+++ b/estilosimagenes.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url(../../../imagenes/fondopagina.jpg);
+    background: url(fondopagina.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
